# ready

./: .gitignore  LICENSE  Pipfile  README.md  SECURITY.txt  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  codeql-analysis.yml  publish.yml
ready/: ready.py  result.py  thttp.py
ready/checks/: bad_response.py  content.py  cookies.py  corp_coop_coep.py  cors.py  csp.py  dns.py  email.py  expect_ct.py  graphql.py  hsts.py  html.py  leaky_headers.py  ns.py  redirect.py  report_to.py  ssl.py  status.py  swagger.py  well_known.py
test/: test_bad_response.py  test_content.py  test_cookies.py  test_corp_coop_coep.py  test_csp.py  test_dns.py  test_hsts.py  test_html.py  test_leaky_headers.py  test_ns.py  test_ready.py  test_redirect.py  test_report_to.py  test_status.py  test_swagger.py  test_well_known.py
