[metadata]
name = ready-check
version = 1.2.3
author = Brenton Cleeland
author_email = brenton@brntn.me
description = A developer-friendly web scanning tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sesh/ready
project_urls =
    Bug Tracker = https://github.com/sesh/ready/issues
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.9
install_requires =
  thttp
  tld
  beautifulsoup4

[options.entry_points]
console_scripts =
    ready = ready:ready.cli
